2004-02-11  Joseph S. Myers  <jsm@polyomino.org.uk>

	PR c/456
	* gcc.dg/cpp/c90-if-comma-1.c, gcc.dg/cpp/c99-if-comma-1.c: New
	tests.

2004-02-10  Alan Modra  <amodra@bigpond.net.au>

	* gcc.dg/cpp/assert4.c: Fix typo last change.

	* gcc.dg/cpp/assert4.c: Handle powerpc64.

	* gcc.dg/debug/20020327-1.c: xfail for powerpc64.

2004-02-08  Joseph S. Myers  <jsm@polyomino.org.uk>

	* gcc.dg/c90-init-1.c: Adjust expected error messages.

2004-02-08  Eric Botcazou  <ebotcazou@libertysurf.fr>

	* g++.dg/eh/simd-2.C: Adjust line numbers for SPARC.

2004-02-08  Eric Botcazou  <ebotcazou@libertysurf.fr>

	* gcc.c-torture/execute/va-arg-25.x: XFAIL only on SPARC 64-bit.

2004-02-07  Zack Weinberg  <zack@codesourcery.com>

	Bug 13856
	* gcc.dg/visibility-8.c: New testcase.

2004-02-07 Geoffrey Keating  <geoffk@geoffk.org>
	    Andrew Pinski  <pinskia@physics.uc.edu>

	* objc.dg/call-super-2.m: Include stddef.h for size_t.
	Update line numbers for the including of stddef.h.

2004-02-07  Zack Weinberg  <zack@codesourcery.com>

	* gcc.c-torture/execute/string-opt-15.c: Define memcmp with void *
	arguments.
	* gcc.dg/fwritable-strings-1.c: Expect the deprecation notice.

2003-02-06  Giovanni Bajo  <giovannibajo@gcc.gnu.org>

	PR c++/14033
	* g++.dg/other/crash-2.C: New test.

2004-02-06  Falk Hueffner  <falk@debian.org>

	PR target/12898
	* gcc.c-torture/compile/20040121-1.c: New test.

2003-02-06  Giovanni Bajo  <giovannibajo@gcc.gnu.org>

	PR c++/14028
	* g++.dg/parse/angle-bracket2.C: New test.

2004-02-05  Rainer Orth  <ro@TechFak.Uni-Bielefeld.DE>

	PR middle-end/13750
	Revert:
	2004-01-15  Geoffrey Keating  <geoffk@apple.com>
	PR pch/13361
	* testsuite/g++.dg/pch/wchar-1.C: New.
	* testsuite/g++.dg/pch/wchar-1.Hs: New.

2004-02-04  Mark Mitchell  <mark@codesourcery.com>

	PR c++/13932
	* g++.dg/warn/conv2.C: New test.

	* lib/file-format.exp (gcc_target_object_format): Use
	${tool}_target_compile, not gcc_target_compile.