@@ -2,9 +2,10 @@
 // Contributed by Aldy Hernandez (aldy@quesejoda.com).
 // { dg-options "-O" }
 // { dg-options "-O -w" { target i?86-*-* } }
-// { dg-do run }
-// { dg-error "" "PR target/12916" { target sparc64-*-* sparcv9-*-* } 12 }
-// { dg-error "" "PR target/12916" { target sparc-*-* } 14 }
+// { dg-options "-O -w -maltivec" { target powerpc64-*-linux* } }
+// { dg-do run { xfail "powerpc64-*-linux*"}  }
+// { dg-error "" "PR target/12916" { target sparc64-*-* sparcv9-*-* } 13 }
+// { dg-error "" "PR target/12916" { target sparc-*-* } 15 }
 
 typedef int __attribute__((mode(V4SI))) vecint;
 
@@ -44,6 +45,10 @@ void f1 (void)
 
 int main ()
 {
+#if defined(__powerpc64__) && defined(__linux__)
+  // Don't run on ppc64-linux, since not always AltiVec regs available   
+  return -1;  
+#endif
   f1 ();
   return 0;
 }
